--- a/css/page.css
+++ b/css/page.css
@@ -200,8 +200,6 @@ img {
     color: var(--color-text);
     text-transform: uppercase;
     max-width: 780px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .slogan-section {
@@ -343,7 +341,7 @@ img {
     min-width: calc(100% + 2px);
 }
 .section-tab-price-service {
-    padding: 50px 0;
+    padding: 50px 0 30px;
 }
 
 .title-section-02 {
@@ -424,4 +422,54 @@ img {
 .link-more a:hover {
     color: var(--color-main);
     background: none;
+}
+.section-salient-features .info .info-tab {
+
+    display: flex;
+    flex-wrap: wrap;
+     margin-left: -35px; 
+    margin-right: -35px;
+}
+
+.section-salient-features .info {
+    border-radius: 24px;
+    background: #FFF;
+    box-shadow: 0px 4px 24px 0px rgba(74, 186, 185, 0.20);
+     padding: 25px; 
+}
+.section-salient-features .info .info-tab .nav {
+    flex: 0 0 33%;
+    max-width: 33%;
+    padding-left: 35px;
+    padding-right: 35px;
+    border-right: 1px solid #C9F0F0;
+}
+
+.section-salient-features .info .tab-content  {
+    max-width: 67%;
+    padding-left: 35px;
+    padding-right: 35px;
+    flex: 0 0 67%;
+}
+
+.section-salient-features .info .nav>.nav-link {
+    font-size: 18px;
+    color: var(--color-main-02);
+    text-align: center;
+    border-radius: 32px;
+    padding: 15px;
+    border: 1px solid #fff;
+    margin-bottom: 1px;
+}
+.section-salient-features .info .nav>.nav-link.active, .section-salient-features .info .nav>.nav-link:hover {
+    color: #fff;
+    background: var(--color-main);
+    border-color: var(--color-main);
+}
+
+.section-salient-features .content .title-section {
+    max-width: 560px;
+}
+.section-salient-features {
+    padding-bottom: 50px;
 }
