--- a/css/page.css
+++ b/css/page.css
@@ -1036,7 +1036,7 @@ img {
     border: 1px solid #4abab900;
     padding: 15px;
     border-radius: 10px;
-    margin-bottom: 15px;
+    height: 100%;
 }
 
 .section-we-hosting-service  .content-text .item .icon:before {
@@ -1092,7 +1092,7 @@ img {
 }
 
 .section-we-hosting-service  .content-text .item .description {
-    height: 64px;
+    height: auto;
     overflow: hidden;
 }
 .section-we-hosting-service  .content-img .img {
@@ -1194,3 +1194,135 @@ img {
     background: #ecf7fa;
 }
 /* doitx */
+@media (max-width:1200px){
+    .section-we-hosting-service .content-text .item {
+        border-color: var(--color-main);
+        padding: 10px;
+    }
+    .section-we-hosting-service .content-img {
+        margin-bottom: 20px;
+    }
+    .section-we-hosting-service .content-text >.row>div {
+        margin-bottom: 15px;
+    }
+    .section-we-hosting-service .content-text .item .icon-link {
+        margin-top: 15px;
+    }
+    
+    .section-we-hosting-service .content-text .item .icon {
+        margin-bottom: 15px;
+    }
+    .section-service-email-02 .title-section {
+        margin-bottom: 30px;
+    }
+
+    .section-service-email-02 .list-sevice-02 .item .icon {
+        width: 80px;
+        height: 80px;
+    }
+    .section-service-email-02 .list-sevice-02 .item .icon img {
+        width: 45px;
+        height: 45px;
+    }
+    .section-service-email-02 {
+        padding-bottom: 0;
+        padding-top: 12px;
+    }
+    .section-we-hosting-service {
+        padding-bottom: 30px;
+    }
+    .section-we-hosting-service .content-img .title-section {
+        margin-bottom: 20px;
+        text-align: center !important;
+    }
+    .section-tab-price-service.price-service-email {
+        padding-bottom: 20px;
+    }
+}
+@media (min-width:767px) and (max-width:1024px){
+    .section-we-hosting-service .content-img .img {
+        display: none;
+    }
+}
+@media (min-width:767px) and (max-width:1200px){
+    .section-service-01 {
+        padding: 40px 0;
+    }
+    .section-we-hosting-service .content-text .item .icon img {
+    
+        height: 25px;
+   
+        margin-left: 15px;
+
+    }
+
+    .section-we-hosting-service .content-img {
+    
+        padding-top: 0;
+    }
+}
+
+@media (min-width:1024px) and (max-width:1200px){
+    .section-we-hosting-service .content-img {
+    
+        padding-top: 0;
+    }
+    .section-we-hosting-service .content-img .title-section {
+    text-align: left !important;
+}
+}
+
+
+@media (max-width:767px){
+    .section-tab-price-service.price-service-email {
+        padding-bottom: 20px;
+    }
+
+    .section-tab-price-service.price-service-email .title-section-02 {
+        margin-bottom: 0;
+    }
+
+
+    .section-service-email-02 .list-sevice-02 .item {
+        margin-bottom: 0;
+    }
+    
+    .section-we-hosting-service .content-text .item .icon img {
+        height: 22px;
+        margin-left: 10px;
+    }
+    
+    
+    .section-partner-service .content {
+        padding: 35px 0 35px;
+    }
+
+    .section-partner-service .item-text-left .name {
+        font-size: 18px;
+    }
+
+    .section-partner-service .item-text-left .description {
+        font-size: 14px;
+    }
+
+    .section-partner-service .item-text-left {
+        margin-bottom: 30px;
+    }
+
+    .list-img-partner>.row>div:nth-child(1):before, .list-img-partner>.row>div:nth-child(2):before, .list-img-partner>.row>div:nth-child(3):before {
+        display: none;
+    }
+    .list-img-partner>.row>div:nth-child(1),
+    .list-img-partner>.row>div:nth-child(2),
+    .list-img-partner>.row>div:nth-child(3),
+    .list-img-partner>.row>div:nth-child(4){
+       border-top:0;
+    }
+
+    .section-partner-service .item-text-left .description > span > img {
+        display: none;
+    }
+    .section-faq-service .info-faq-right {
+        margin-top: 30px;
+    }
+}
